# fetch_fridge

./: CMakeLists.txt  README.md  package.xml
config/: fetchfridge.rviz
launch/: detect_fridge.launch  reproduce_pc.launch
msg/: PoseStampedBooled.msg
script/: base_scan.py  frame_converter.py  fridgetracker.l  load-common.l  main.l  move.l  pr2_demo.l  republisher.py  utils.l
